--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,16 @@
+????????
+    Sofware-related changes:
+      * New command line argument: -!reset-out-files
+      * Improved redirection files behavior.
+      * Fixed bug in setwindow.
+      * Unimplemented commands: killmenu
+	  * global.sav and nonsflog.dat moved to the save directory.
+	  * Fixed bug printing mechanism.
+    
+    Documentation changes:
+      * Added CompatibilityList.txt
+      * Added doc/ThingsThatAreNoLongerLegal.txt
+
 20080126
     Sofware-related changes:
       * Major bugs in the Linux version fixed. Now ONSlaught works correctly in
