--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -2,6 +2,7 @@
     Sofware-related changes:
       * Implemented the following commands: blt, fileexist, menu_full, mp3stop,
             savefileexist, savescreenshot, savescreenshot2, savetime.
+      * New commands: savetime2.
       * New command line argument: -!reset-out-files
       * Improved redirection files behavior.
       * Fixed bug in setwindow.
