--- a/trunk/tools/ChangeLog.txt
+++ b/trunk/tools/ChangeLog.txt
@@ -1,3 +1,6 @@
+200904??
+    * Added -l option to crypt for backwards compatibility with NSDEC.exe.
+
 20090208
     * Nearly no changes. Last release until I can crack this SPB compression
       thing.
