--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,5 +1,6 @@
-2009????
-    * Implemented: split, isdown, isfull, getcursorpos.
+trunk
+    * Implemented: split, isdown, isfull, getcursorpos, textgosub, ispage,
+        puttext.
     * Unimplemented: kidokumode, kidokuskip, skipoff, isskip.
     * Fixed serious bug in the string reduction algorithm.
     * Implemented mouse wheel.
@@ -10,6 +11,8 @@
     * Fixed bug in the bilinear interpolation function.
     * Fixed bug related to !sd and !s# escape sequences.
     * doc/Changes.txt reformatted.
+    * Save file version upgraded.
+    * Added INSTALL.txt with installation instructions.
 
 20090307
     * Several bug fixes.
